Correction alignement vertical titre cards activités

--- a/css/style.css
+++ b/css/style.css
@@ -404,8 +404,9 @@ input{
 
 .activités-cards .card-title{
     display: flex;
-    align-items: flex-start;
-    padding: 5px 0px 5px 19px;
+    align-items: center;
+    flex: 1;
+    padding: 5px 19px 5px 19px;
     gap: 10px;
     margin: 0;
     font-size: 16px;
